--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
       class="theme-background-color theme-text-color windowDragHandle"
       tabindex="-1"
     >
+      <button
+              id="favorite-button"
+              class="navbar-action-button i carbon:favorite"
+              tabindex="-1"
+      ></button>
     <div id="mac-window-drag-area"></div>
       <button
         id="menu-button"
@@ -189,7 +194,11 @@
     <div id="searchbar" class="theme-background-color theme-text-color">
       <div class="top-answer-area"></div>
     </div>
+    <div id="favorites-bar" class="theme-background-color theme-text-color">
 
+
+
+    </div>
     <div id="overlay"></div>
 
     <div id="webviews">
